fix z-index for github link

--- a/src/diorama.css
+++ b/src/diorama.css
@@ -58,7 +58,6 @@ body {
     position: fixed;
     top: 10px;
     left: 10px;
-    z-index: 1;
 }
 
 .diorama nav button {
